--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
 	"dependencies": {
 	},
 	"devDependencies": {
+		"pdfjs-dist": "^1.8.444",
 		"tape": "^4.6.3",
 		"tap-min": "^1.2.1"
 	},
 	"scripts": {
+		"build": "node build/index.js",
 		"test": "node test.js | tap-min",
 		"prepublishOnly": "npm test"
 	}
