--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"tap-min": "^1.2.2",
 		"tape": "^4.6.3",
 		"through2": "^2.0.3",
+		"vbb-lines-at": "^3.8.0",
 		"vbb-stations": "^5.5.0"
 	},
 	"scripts": {
