--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
 		"@turf/centroid": "^4.7.3",
 		"alkis-berlin-client": "^0.1.0",
 		"gps-distance": "^0.0.4",
+		"leven": "^2.1.0",
 		"queue": "^4.4.1",
 		"stream-filter": "^2.1.0",
 		"tap-min": "^1.2.2",
 		"tape": "^4.6.3",
 		"through2": "^2.0.3",
 		"vbb-lines-at": "^3.8.0",
+		"vbb-short-station-name": "^0.4.0",
 		"vbb-stations": "^5.5.0"
 	},
 	"scripts": {
