let Travis CI deploy :green_heart:

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,15 @@ node_js:
 script:
   - npm run build
   - npm test
+before_deploy:
+  - ls -lh s/*.json
+  - npm i semver
+  - npm version --no-git-tag-version --force $(./node_modules/.bin/semver -i minor $(npm info vbb-station-shapes version))
+deploy:
+  provider: npm
+  on:
+    branch: master
+    node: stable
+  email: 'mail@jannisr.de'
+  api_key: ${NPM_TOKEN}
+  skip_cleanup: true
