--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"gps-distance": "^0.0.4",
 		"leven": "^2.1.0",
 		"queue": "^4.4.1",
+		"shorthash": "^0.0.2",
 		"stream-filter": "^2.1.0",
 		"tap-min": "^1.2.2",
 		"tape": "^4.6.3",
