fix deployment :green_heart:

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
 before_deploy:
   - ls -lh s/*.json
   - npm i semver
-  - npm version --no-git-tag-version --force $(./node_modules/.bin/semver -i minor $(npm info vbb-station-shapes version))
+  - npm version --no-git-tag-version --force --allow-same-version $(./node_modules/.bin/semver -i minor $(npm info vbb-station-shapes version))
 deploy:
   provider: npm
   on:
