--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"vbb-stations": "^5.5.0"
 	},
 	"scripts": {
-		"build": "rm s/*.json list.json; node build/index.js",
+		"build": "rm s/*.json list.json; env NODE_ENV=dev node build/index.js",
 		"test": "node test.js | tap-min",
 		"prepublishOnly": "npm run build && npm test"
 	}
