--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
 	"scripts": {
 		"build": "rm s/*.json list.json; env NODE_ENV=dev node build/index.js",
 		"test": "node test.js | tap-min",
-		"prepublishOnly": "npm run build && npm test"
+		"prepublishOnly": "npm test"
 	}
 }
